docs: add documentation for show openings
