# handler/showOpening.go
@@ -7,6 +7,18 @@ import (
 	"github.com/kayquesza/api-go-learning/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary      Show Opening
+// @Description  Show a job opening
+// @Tags         opening
+// @Accept       json
+// @Produce      json
+// @Param id query string true "Opening Identification"
+// @Success      200      {object}  ShowOpeningResponse
+// @Failure      400      {object}  ErrorResponse
+// @Failure      404      {object}  ErrorResponse
+// @Router       /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
